--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Ctext x='4' y='26' font-size='28' font-family='Arial, Helvetica, sans-serif' fill='%233b82f6'%3E%23%3C/text%3E%3C/svg%3E">
     <title> Learn React SM</title>
   </head>
   <body>
